Adicionado Swagger no dockerFile
