# routes/api.php
@@ -6,7 +6,6 @@ use App\Http\Controllers\TaskController;
 use App\Http\Controllers\Auth\AuthController;
 
 Route::post('login', [AuthController::class, 'login']); 
-Route::post('/register', [AuthController::class, 'register']);
 
 Route::middleware('auth:sanctum')->group(function () {
     Route::get('tasks', [TaskController::class, 'index']);
