# storage/api-docs/api-docs.json
@@ -6,54 +6,6 @@
         "version": "1.0.0"
     },
     "paths": {
-        "/api/register": {
-            "post": {
-                "tags": [
-                    "Autenticação"
-                ],
-                "summary": "Registrar um novo usuário",
-                "operationId": "ca7c0cb6772de9bffbb8c896980cebc8",
-                "requestBody": {
-                    "required": true,
-                    "content": {
-                        "application/json": {
-                            "schema": {
-                                "required": [
-                                    "name",
-                                    "email",
-                                    "password"
-                                ],
-                                "properties": {
-                                    "name": {
-                                        "type": "string",
-                                        "example": "João da Silva"
-                                    },
-                                    "email": {
-                                        "type": "string",
-                                        "format": "email",
-                                        "example": "joao@email.com"
-                                    },
-                                    "password": {
-                                        "type": "string",
-                                        "format": "password",
-                                        "example": "123456"
-                                    }
-                                },
-                                "type": "object"
-                            }
-                        }
-                    }
-                },
-                "responses": {
-                    "201": {
-                        "description": "Usuário registrado com sucesso"
-                    },
-                    "422": {
-                        "description": "Erro de validação"
-                    }
-                }
-            }
-        },
         "/api/login": {
             "post": {
                 "tags": [
